headless: Fix crash report uploading

Use the "Chrome" product when uploading crash reports in headless mode.
In order to make the headlessness of these reports easier to spot, we
also set a permanent "headless=true" crash key.

BUG=824850

Change-Id: I389134f46ce101c6cb88bd15a885cf1877a70483
Reviewed-on: https://chromium-review.googlesource.com/1059621
Reviewed-by: Alexander Timin <altimin@chromium.org>
Commit-Queue: Sami Kyöstilä <skyostil@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559040}
Former-commit-id: b3652bb8e7c4fa0737008ec096b0154683b907cf